<resources>
    <string name="default_locale">CN</string>
    <string name="default_localecode">86</string>
    <string name="default_localename">China</string>
    <string name="quit">return</string>
    <string name="settings">Set up</string>
    <string name="help">help</string>
    <string name="string_help_text">The current application lacks necessary permissions.\n\Please click\"Setting\"-\"Authority\"-Open the required permissions.</string>
    <string name="error_nonetwork">Mobile phone has no internet</string>
    <string name="prompt_requestfailed">Request failed:</string>
    <string name="prompt_busynetwork">Busy network:</string>
    <string name="app_name">Menke</string>
    <string name="schedule">Schedule</string>
    <string name="coursetitle">Course</string>
    <string name="clickenter">View shcedule</string>
    <string name="recentschedule">Recent courses</string>
    <string name="mine">My profile</string>
    <string name="setting">Settings</string>
    <string name="class_countdown">Class start in</string>
    <string name="enter_class">Enter classroom</string>
    <string name="tasks">Homework</string>
    <string name="comment">Report</string>
    <string name="reply">Replay</string>
    <string name="class_tips">Big class can only be accessed by PC browser or client</string>
    <string name="class_teacher">Teacher</string>
    <string name="class_type">Type</string>
    <string name="class_time">Time</string>
    <string name="class_time_dot">Time:</string>
    <string name="class_teacher_dot">Teacher:</string>
    <string name="class_process_dot">Progress:</string>
    <string name="class_nextclass_dot">Next class:</string>
    <string name="course_file">Course resource package</string>
    <string name="course_dot">&#183;</string>
    <string name="course_not_start">Not started yet</string>
    <string name="course_class">lessons</string>
    <string name="course_complete">Completed</string>
    <string name="course_notcomplete">Incomplete</string>
    <string name="mycourse">My course</string>
    <string name="course">lessons</string>
    <string name="teacher">Teacher</string>
    <string name="assistantor">Assistant</string>
    <string name="nocourse">No data</string>
    <string name="course_doing">In Class</string>
    <string name="course_comple">Over</string>
    <string name="course_material">Course resource package</string>
    <string name="text_not_found">Text not found</string>
    <string name="view_file">File view：</string>
    <string name="file_not_exist">File does not exist</string>
    <string name="file_not_recognized">Unrecognized file</string>
    <string name="choose_one_activity_to_open">Please select an app to open</string>
    <string name="file_view">File Preview</string>
    <string name="class_report">Class report</string>
    <string name="class_time2">Time：</string>
    <string name="class_gain_totle">trophies obtained</string>
    <string name="class_cups_num"></string>
    <string name="class_minus">Minutes in total</string>
    <string name="class_inroom">In classroom</string>
    <string name="class_leave">Leave</string>
    <string name="class_late">Late</string>
    <string name="class_early">Leave early</string>
    <string name="class_time_long">Class time</string>
    <string name="class_total"></string>
    <string name="nomatrial">No data</string>
    <string name="today">Today</string>
    <string name="hi">Hi</string>
    <string name="nomoredata">It’s bottom already</string>
    <string name="datagenerate"> The data is being generated</string>
    <string name="month">month</string>
    <string name="day">day</string>
    <string name="secondsfh">&#8220;</string>
    <string name="minitefh">&#8216;</string>
    <string name="enterhomework">Enter now</string>
    <string name="homework">My homework</string>
    <string name="myhomework">My homework</string>
    <string name="gotocomplete">Go to complete</string>
    <string name="gotopublish">Go to post</string>
    <string name="gotosubmit">Go to submit</string>
    <string name="draft">Drafts</string>
    <string name="nocommite">To submit</string>
    <string name="commited">Submitted</string>
    <string name="unrate">unrate</string>
    <string name="rated">rated</string>
    <string name="edit">edit</string>
    <string name="publish">Post</string>
    <string name="homeworkdetail">homeworkdetail</string>
    <string name="gotorate">Go to review</string>
    <string name="notify">Bulk notice</string>
    <string name="nohomeworkcommite">No Homework Commit</string>
    <string name="nodata">No data</string>
    <string name="delete">delete</string>
    <string name="excellent">Excellent</string>
    <string name="good">Good</string>
    <string name="secondary">Satisfactory</string>
    <string name="flunk">Fail</string>
    <string name="homework_complete">Done</string>
    <string name="homework_notcomplete">To do</string>
    <string name="people_submitted">people have submitted</string>
    <string name="expired">Expired</string>
    <string name="nofity_sucuess">Notify successful</string>
    <string name="review_homework">Review homework</string>
    <string name="pub_homework">Publish homework</string>
    <string name="home">Home</string>
    <string name="login_title">Welcome to %s!</string>
    <string name="login_title2">Login to your account</string>
    <string name="login_phonename">Phone number</string>
    <string name="login_phonecountrycode">+86</string>
    <string name="login_et_phone_hint">Phone number</string>
    <string name="login_confirm">Next step</string>
    <string name="login_title_ps">Verify identity</string>
    <string name="login_title2_ps">You could verify by password if your phone is not available</string>
    <string name="login_confirm_ps">Send verification code</string>
    <string name="login_usepwd_ps">Use password</string>
    <string name="login_userprivacyagreement">Have read and agree</string>
    <string name="login_userprivacyagreement2">&#160;\"User Agreement\" and \"Privacy Policy\"</string>
    <string name="login_userprivacyagreement3">Agree to the agreement below to continue logging in</string>
    <string name="vcodeinput_title">Enter authentication code</string>
    <string name="vcodeinput_title2">Authentication code is sent to</string>
    <string name="vcodeinput_resend">Send again in %s second</string>
    <string name="vcodeinput_resend2">Authentication code is not received?</string>
    <string name="vcodeinput_resend3">Send again</string>
    <string name="countryarea_title">Choose country/region</string>
    <string name="countryarea_currentcountryarea">Current country/region</string>
    <string name="countryarea_currentcountryname">China</string>
    <string name="countryarea_othercountryarea">Other country/region</string>
    <string name="pwdlogin_title">Login password</string>
    <string name="pwdlogin_title2">Login to your account</string>
    <string name="pwdlogin_et_pwd_hint">Enter password</string>
    <string name="pwdlogin_pwd_name">Password</string>
    <string name="pwdlogin_forgetpwd">Forget password</string>
    <string name="pwdlogin_confirm">Login</string>
    <string name="pwdlogin_confirming">Logging in</string>
    <string name="pwdlogin_title2_ps">You can verify by SMS verification code if you forget your password</string>
    <string name="pwdlogin_useverificationcode_ps">Use SMS verification code</string>
    <string name="chooseidentity_title">Choose your identification</string>
    <string name="chooseidentity_title2">Your identification could be changed in “my profile</string>
    <string name="chooseidentity_teacher">Teacher</string>
    <string name="chooseidentity_student">Student</string>
    <string name="chooseidentity_confirm">Confirm</string>
    <string name="forgetpwd_title">Forget password</string>
    <string name="forgetpwd_title2">Verify with phone number</string>
    <string name="setnewpassword_title">Set New Password</string>
    <string name="setnewpassword_title2">Password consists of 8-20 words or numbers</string>
    <string name="setnewpassword_pwd">Password</string>
    <string name="setnewpassword_pwd_confirm">Confirm password</string>
    <string name="setnewpassword_pwd_confirm_hint">Enter password</string>
    <string name="setnewpassword_title_ps">Change Password</string>
    <string name="personalsettings_title">Personal settings</string>
    <string name="personalsettings_changemobile">Change mobile</string>
    <string name="personalsettings_changepassword">Change password</string>
    <string name="personalsettings_language">Language</string>
    <string name="personalsettings_languagetype">Follow system</string>
    <string name="personalsettings_eyeprotection">Eye protection mode</string>
    <string name="personalsettings_useragreement">User agreement</string>
    <string name="personalsettings_privacypolicy">Privacy Policy</string>
    <string name="buttonAlbumTitle">Album</string>
    <string name="buttonTakePhotoTitle">Take photo</string>
    <string name="buttonCancel">Cancel</string>
    <string name="hw_hint_title">Title of assignment</string>
    <string name="hw_hint_content">Please enter the requirements of assignment ( within 200 words)</string>
    <string name="hw_hint_s_content">Please input here ( within 200 words)</string>
    <string name="hw_camera">Camera</string>
    <string name="hw_video">Video</string>
    <string name="hw_audio">Audio</string>
    <string name="hw_file">File</string>
    <string name="hw_drive">Drive</string>
    <string name="service_and_privacy">Service agreement and privacy policy</string>
    <string name="service_and_privacy_content2">In order to provide you with a one-click sharing service, our product integrates UMeng + U-Share SDK. UMeng + SDK needs to collect the Mac address of your device, unique device identification code (IMEI/android ID/IDFA/OPENUDID/GUID, SIM Card, and IMSI information), and the public information of the social account you need to share for completing the one-click sharing service.We also calibrate the data accuracy of the report through the geographic location and provide basic anti-cheating services.For your information security, we have entered into data security and confidentiality agreements with third-party SDK service providers, and these companies will strictly abide by our data privacy and security requirements. Unless with your consent, we will not share your personally identifiable information with them. In order for you to better understand the types and uses of data collected by [UMeng+], and how to protect your personal information, you can log in to https://www.umeng.com/policy to understand the [UMeng+] privacy policy .</string>
    <string name="service_and_privacy_content3">You need to agree to the "User Agreement" and "Privacy Agreement" to continue using our App～</string>
    <string name="service_and_privacy_agree">Agree</string>
    <string name="service_and_privacy_disagree">Disagree</string>
    <string name="unregister_title">Are you sure you want to unregister</string>
    <string name="unregister_yes">Confirm</string>
    <string name="unregister_no">Not yet</string>
    <string name="unregister_result">Risk of deleting your account</string>
    <string name="unregister_result1">Fail to Login</string>
    <string name="unregister_result2">Once the account has been deleted, you cannot login Talk-Cloud Online School or related platforms with it any longer.</string>
    <string name="unregister_result3">Clear all Information Irretrievably</string>
    <string name="unregister_result4">After cancelling the account, all information will be wiped, including but not limited to personal profile, notifications, courses and recordings.</string>
    <string name="unregister_result5">Call %s to contact with support team for deleting your account.</string>
</resources>