<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mSelectStudentRootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_select_img"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp">

        <ImageView
            android:id="@+id/mCancelBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:src="@mipmap/countryarea_close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/unregister_title"
            android:textColor="@color/text_main_black_color"
            android:textSize="24dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="16dp"
        android:paddingRight="30dp"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unregister_result"
            android:textColor="@color/text_main_black_color"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/unregister_result1"
            android:textColor="@color/text_main_black_color"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unregister_result2"
            android:textColor="@color/my_tips_color"
            android:textSize="14dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/unregister_result3"
            android:textColor="@color/text_main_black_color"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unregister_result4"
            android:textColor="@color/my_tips_color"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/mUnregisterPhoneTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/unregister_result5"
            android:textColor="@color/text_main_black_color"
            android:textSize="16dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/mCancelBtn2"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:background="@drawable/shape_gray_bg_r15"
            android:gravity="center"
            android:text="@string/unregister_no"
            android:textColor="@color/text_main_black_color"
            android:textSize="18dp" />


        <TextView
            android:id="@+id/mConfirmBtn"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@drawable/shape_blue_bg_r15"
            android:gravity="center"
            android:text="@string/unregister_yes"
            android:textColor="@android:color/white"
            android:textSize="18dp" />


    </LinearLayout>


</LinearLayout>