<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_select_img"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mPhotoBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/buttonAlbumTitle"
            android:textColor="@color/text_main_black_color"
            android:textSize="17dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divider_line_color" />

        <TextView
            android:id="@+id/mTakePhotoBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/buttonTakePhotoTitle"
            android:textColor="@color/text_main_black_color"
            android:textSize="17dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/divider_line_color" />

        <TextView
            android:id="@+id/mCancelBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/buttonCancel"
            android:textColor="@color/text_main_black_color"
            android:textSize="17dp" />
    </LinearLayout>
</RelativeLayout>

