<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_global"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.CountryAreaActivity"
    tools:ignore="MissingDefaultResource,RtlCompat">


    <ImageView
        android:id="@+id/iv_left_bg"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="fitXY"
        android:visibility="gone"
        app:layout_constraintDimensionRatio="h,16:9"
        android:src="@mipmap/login_left_bg"
        android:layout_height="match_parent" />


    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_left_bg"
        android:layout_marginTop="14dp"
        android:layout_marginStart="10dp"
        android:src="@mipmap/countryarea_close"
        android:layout_height="40dp" />


    <TextView
        app:layout_constraintTop_toTopOf="@+id/iv_close"
        android:id="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/iv_close"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:textColor="@color/networkshcool_e1f20"
        android:textSize="18dp"
        android:text="@string/countryarea_title"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_currentcountryarea"
        app:layout_constraintStart_toEndOf="@+id/iv_left_bg"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_close"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_width="0dp"
        android:textColor="@color/networkshcool_8f92a1"
        android:textSize="12dp"
        android:text="@string/countryarea_currentcountryarea"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_currentcountryname"
        app:layout_constraintStart_toStartOf="@+id/tv_currentcountryarea"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_currentcountryarea"
        android:layout_width="wrap_content"
        android:textColor="@color/networkshcool_e1f20"
        android:textSize="14dp"
        android:text="@string/countryarea_currentcountryname"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/tv_currentcountrycode"
        app:layout_constraintTop_toTopOf="@+id/tv_currentcountryname"
        app:layout_constraintBottom_toBottomOf="@+id/tv_currentcountryname"
        app:layout_constraintEnd_toEndOf="@+id/tv_currentcountryarea"
        android:layout_width="wrap_content"
        android:textColor="@color/networkshcool_e1f20"
        android:textSize="14dp"
        android:text="@string/login_phonecountrycode"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_othercountryarea"
        app:layout_constraintTop_toBottomOf="@+id/tv_currentcountryname"
        app:layout_constraintStart_toStartOf="@+id/tv_currentcountryname"
        android:layout_width="wrap_content"
        android:textColor="@color/networkshcool_8f92a1"
        android:textSize="12dp"
        android:layout_marginTop="19dp"
        android:text="@string/countryarea_othercountryarea"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_countrycode"
        android:layout_width="0dp"
        android:layout_marginTop="6dp"
        app:layout_constraintStart_toStartOf="@+id/tv_currentcountryarea"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tv_currentcountryarea"
        app:layout_constraintTop_toBottomOf="@+id/tv_othercountryarea"
        android:overScrollMode="never" />

</androidx.constraintlayout.widget.ConstraintLayout>